# meshtastic-ham-bridge

./: Cargo.toml  Makefile  README.md  SESSION_CONTEXT.md  direwolf-rx.conf  direwolf-tx.conf  go.mod  go.sum
cmd/bridge/: audio_default.go  audio_liquid.go  main.go
cmd/dwprobe/: main.go
configs/: ic705.toml
deploy/systemd/: meshtastic-ham-bridge.service
internal/bridge/: bridge.go  bridge_test.go
internal/config/: config.go  config_test.go
internal/discovery/: discovery.go  discovery_ble.go  discovery_test.go
internal/ham/: audio.go  direwolf.go  direwolf_config.go  direwolf_config_parse.go  direwolf_devices.go  direwolf_launch.go  direwolf_test.go  framing.go  ham.go  mock.go  ptt.go  ptt_cm108.go  rigctl.go  rigctl_test.go
internal/ham/liquid/: adapter.go  liquid_shim.h  (+2 more)
internal/mesh/: ble_pair_other.go  ble_pair_page.html  ble_pair_web_windows.go  ble_pair_windows.go  mesh.go  meshcore.go  meshtastic.go  meshtastic_ble.go  mock.go  winrt_enumeration_windows.go
internal/platform/: platform.go
internal/types/: types.go
ios/: README.md
ios/MeshtasticHamBridge/: BridgeManager.swift  BridgingHeader.h  ContentView.swift  MeshtasticHamBridgeApp.swift  bridge.h
meshtastic-ham-bridge/: Cargo.toml
mobile/: mobile.go
scripts/: install-pi.sh
src/: error.rs  lib.rs  types.rs
src/bridge/: mod.rs
src/config/: mod.rs
src/ffi/: mod.rs
src/ham/: audio.rs  direwolf.rs  mock.rs  mod.rs
src/mesh/: meshcore.rs  meshtastic.rs  mock.rs  mod.rs
tests/: config_tests.rs  direwolf_tests.rs  hardware_tests.rs  integration_tests.rs  mesh_mock_tests.rs
