[package]
   name = "meshtastic-ham-bridge"
   version = "0.1.0"
   edition = "2021"

   [dependencies]
   tokio = { version = "1.35", features = ["full"] }
   async-trait = "0.1"
   thiserror = "1.0"
   serde = { version = "1.0", features = ["derive"] }
   serde_json = "1.0"
   tracing = "0.1"
   chrono = { version = "0.4", features = ["serde"] }
   uuid = { version = "1.6", features = ["v4", "serde"] }
   meshtastic = { version = "0.1", features = ["bluetooth-le"] }
   meshcore-rs = { version = "0.1", features = ["ble"] }
   cpal = "0.15"
   rubato = "0.15"    # sample rate conversion
   toml = "0.8"
   dirs = "5.0"
   
   [dev-dependencies]
   tokio = { version = "1.35", features = ["full", "macros"] }
   tempfile = "3"